--- a/_includes/workshop_ad.html
+++ b/_includes/workshop_ad.html
@@ -2,6 +2,13 @@
   <div class="row">
     <div class="col-md-10 col-md-offset-1">
       <h2 style="margin-top: 0px;">Software Carpentry Workshop @ {{page.venue}}</h2>
+        <div style="font-style:italic; margin-bottom: 10px;">
+            The <a href="http://www.nottingham.ac.uk/adac/index.aspx" target="_blank" rel="nofollow">Advanced Data Analysis Centre</a>,
+          <a href="http://elixir-uk.org/" target="_blank" rel="nofollow">ELIXIR-UK</a> and the
+          <a href="https://www.software.ac.uk/" target="_blank" rel="nofollow">Software Sustainability Institute</a> are proud
+            to host a course in data analysis and software development covering
+            programming in R and software design best practices for robust research software development.
+        </div>
       <div class="row">
         <div class="col-md-6">
           <p>{{page.humandate}}</p>
