--- a/_includes/workshop_ad.html
+++ b/_includes/workshop_ad.html
@@ -6,8 +6,8 @@
             The <a href="http://www.nottingham.ac.uk/adac/index.aspx" target="_blank" rel="nofollow">Advanced Data Analysis Centre</a> (University of Nottingham),
           <a href="http://elixir-uk.org/" target="_blank" rel="nofollow">ELIXIR-UK</a> and the
           <a href="https://www.software.ac.uk/" target="_blank" rel="nofollow">Software Sustainability Institute</a> are proud
-            to host a course in data analysis and software development covering
-            programming in R and software design best practices for robust research software development.
+            to organise and host a course in data analysis and software development covering
+            research software design best practices and programming in R for robust research software development.
         </div>
       <div class="row">
         <div class="col-md-6">
